# otus_hw_04

./: .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  bintray-descriptor.json  index.html
include/: output_ip.h
src/: main.cpp
tests/: test_integral.cpp  test_iterables.cpp  test_string.cpp  test_tuple.cpp
